--- a/src/main/resources/public/bestellung-drucken.html
+++ b/src/main/resources/public/bestellung-drucken.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Auftrag drucken - Computer-Insel Tools by Sita Geßner</title>
-    <link rel="icon" href="/themes/icons/auftrag.png">
-    <link rel="stylesheet" href="/themes/css/auftrag.css">
+    <title>Bestellung drucken - Computer-Insel Tools by Sita Geßner</title>
+    <link rel="icon" href="/themes/icons/bestellung.png">
+    <link rel="stylesheet" href="/themes/css/bestellung.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/de.js"></script>
   </head>
   <body>
-    <div id="auftrag-drucken">
+    <div id="bestellung-drucken">
       <header>
         <div class="center" style="width: 250px; height: 90px;">
           <img src="/themes/icons/logo.png" width="250" height="90">
@@ -40,7 +40,7 @@
       <br>
       <br>
       <div class="center font30">Verbindliche Bestellung</div>
-      <div class="font15">Auftragsnummer: {{entity.filiale.kuerzel}}{{entity.nummerAnzeige}}</div>
+      <div class="font15">Bestellnummer: {{entity.filiale.kuerzel}}{{entity.nummerAnzeige}}</div>
       <br>
       <table class="font16">
         <tbody>
@@ -111,5 +111,5 @@
   </body>
   <script src="/scripts/util.js"></script>
   <script src="/scripts/messages.dialog.component.js"></script>
-  <script src="/scripts/auftrag/auftrag-drucken.js"></script>
+  <script src="/scripts/bestellung/bestellung-drucken.js"></script>
 </html>
