--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -49,16 +49,16 @@
         </ul>
       </li>
       <li>
-        <a href="#auftraege">Aufträge</a>
+        <a href="#bestellungen">Bestellung</a>
         <ul>
           <li>
-            <a href="#auftraege-erstellen">Erstellen</a>
+            <a href="#bestellungen-erstellen">Erstellen</a>
             <ul>
-              <li><a href="#auftraege-angebotwhlen">Angebot wählen</a></li>
-              <li><a href="#auftraege-kundewhlen">Kunde wählen</a></li>
+              <li><a href="#bestellungen-angebotwhlen">Angebot wählen</a></li>
+              <li><a href="#bestellungen-kundewhlen">Kunde wählen</a></li>
             </ul>
           </li>
-          <li><a href="#auftraege-1">Aufträge</a></li>
+          <li><a href="#bestellungen-1">Bestellungen</a></li>
         </ul>
       </li>
       <li><a href="#kunden">Kunden</a></li>
@@ -134,7 +134,7 @@
       <li>Reparaturaufträge verwalten</li>
       <li>Rechnungen verwalten</li>
       <li>Angebote verwalten</li>
-      <li>Aufträge verwalten</li>
+      <li>Bestellungen verwalten</li>
       <li>Kunden verwalten</li>
       <li>Kassenbücher verwalten</li>
       <li>Kassenstand berechnen</li>
@@ -266,28 +266,28 @@
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann das Angebot in der Druckansicht angezeigt werden. Dazu wird das Recht <em>ANGEBOT</em> benötigt.</p>
     <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann das Angebot bearbeitet werden.</p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann ein Angebot nach nochmaliger Bestätigung gelöscht werden.</p>
-    <h2 id="auftraege">Aufträge</h2>
-    <p>Die Seite Aufträge unterteilt sich in die zwei Unterseiten <strong>Erstellen</strong> und <strong>Aufträge</strong>.</p>
-    <h3 id="auftraege-erstellen">Erstellen</h3>
-    <p>Um diese Seite öffnen zu können wird das Recht <em>ZUGRIFF_AUFTRAG_ERSTELLEN</em> benötigt.
-    Um den Auftrag nach der Erstellung ansehen und drucken zu können, wird das Recht <em>AUFTRAG</em> benötigt.</p>
-    <p>Auf dieser Seite befinden sich verschiedene Felder die beim Erstellen eines Auftrags zu befüllen sind.
-    Nach dem Speichern öffnet sich eine neue Seite für den Druck des Auftrags.
+    <h2 id="bestellungen">Bestellung</h2>
+    <p>Die Seite Bestellung unterteilt sich in die zwei Unterseiten <strong>Erstellen</strong> und <strong>Bestellungen</strong>.</p>
+    <h3 id="bestellungen-erstellen">Erstellen</h3>
+    <p>Um diese Seite öffnen zu können wird das Recht <em>ZUGRIFF_BESTELLUNG_ERSTELLEN</em> benötigt.
+    Um die Bestellung nach der Erstellung ansehen und drucken zu können, wird das Recht <em>BESTELLUNG</em> benötigt.</p>
+    <p>Auf dieser Seite befinden sich verschiedene Felder die beim Erstellen einer Bestellung zu befüllen sind.
+    Nach dem Speichern öffnet sich eine neue Seite für den Druck der Bestellung.
     Ebenfalls wird ein Hinweis geöffnet, dass das DSGVO-Informationsblatt vom Kunden zu Unterzeichnen ist, wenn er dies noch nicht getan hat.</p>
-    <h4 id="auftraege-angebotwhlen">Angebot wählen</h4>
+    <h4 id="bestellungen-angebotwhlen">Angebot wählen</h4>
     <p>Um das Angebot zu wählen muss neben dem Label <em>Angebot</em> das <em>Angebot-Icon</em> geklickt werden. Anschließend öffnet sich ein Dialog in dem das entsprechende Angebot gesucht werden kann.
     Durch Klick auf das <em>OK-Icon</em> wird das Angebot ausgewählt und der Dialog schließt sich.</p>
-    <h4 id="auftraege-kundewhlen">Kunde wählen</h4>
+    <h4 id="bestellungen-kundewhlen">Kunde wählen</h4>
     <p>Um den Kunden zu wählen muss neben dem Label <em>Kunde</em> das <em>Kunde-Icon</em> geklickt werden. Anschließend öffnet sich ein Dialog in dem der entsprechende Kunde gesucht werden kann.
     Durch Klick auf das <em>OK-Icon</em> wird der Kunde ausgewählt und der Dialog schließt sich.</p>
     <p>Ist das Recht <em>KUNDEN_VERWALTEN</em> gesetzt, können in diesem Dialog neue Kunden angelegt oder bestehende Kunden editiert werden.</p>
-    <h3 id="auftraege-1">Aufträge</h3>
-    <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_AUFTRAG_UEBERSICHT</em> benötigt.
-    Das Recht <em>AUFTRAG_VERWALTEN</em> wird benötigt um Aufträge zu bearbeiten oder zu löschen.</p>
-    <p>Auf dieser Seite befindet sich eine Auflistung aller Aufträge. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
-    <p>Durch Klick auf das <em>Öffnen-Icon</em> kann der Auftrag in der Druckansicht angezeigt werden. Dazu wird das Recht <em>AUFTRAG</em> benötigt.</p>
-    <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann der Auftrag bearbeitet werden.</p>
-    <p>Durch Klick auf das <em>Löschen-Icon</em> kann ein Auftrag nach nochmaliger Bestätigung gelöscht werden.</p>
+    <h3 id="bestellungen-1">Bestellungen</h3>
+    <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_BESTELLUNG_UEBERSICHT</em> benötigt.
+    Das Recht <em>BESTELLUNG_VERWALTEN</em> wird benötigt um Bestellungen zu bearbeiten oder zu löschen.</p>
+    <p>Auf dieser Seite befindet sich eine Auflistung aller Bestellungen. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
+    <p>Durch Klick auf das <em>Öffnen-Icon</em> kann die Bestellung in der Druckansicht angezeigt werden. Dazu wird das Recht <em>BESTELLUNG</em> benötigt.</p>
+    <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann die Bestellung bearbeitet werden.</p>
+    <p>Durch Klick auf das <em>Löschen-Icon</em> kann eine Bestellung nach nochmaliger Bestätigung gelöscht werden.</p>
     <h2 id="kunden">Kunden</h2>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_KUNDEN</em> benötigt.
       Um Kunden Anlegen, Bearbeiten oder Löschen zu können, wird das Recht <em>KUNDEN_VERWALTEN</em> benötigt.
@@ -513,11 +513,11 @@
       <li><strong>ZUGRIFF_RECHNUNG_EXPORT</strong> - Zugriff auf die Seite Übersicht Export (Rechnungen)</li>
       <li><strong>RECHNUNG_EXPORT</strong> - Rechnungen können exportiert werden</li>
       <li><strong>ZUGRIFF_EINKAUF</strong> - Zugriff auf die Seite: Einkauf</li>
-      <li><strong>KUNDEN_AUFTRAEGE</strong> - Ermöglicht das Anzeigen aller Aufträge eines Kunden</li>
-      <li><strong>ZUGRIFF<em>AUFTRAG</em>ERSTELLEN</strong> - Zugriff auf die Seite Aufträge erstellen</li>
-      <li><strong>ZUGRIFF<em>AUFTRAG</em>UEBERSICHT</strong> - Zugriff auf die Seite Übersicht Aufträge</li>
-      <li><strong>AUFTRAG</strong> - Ermöglicht das Anzeigen der Druckansicht eines Auftrags</li>
-      <li><strong>AUFTRAG_VERWALTEN</strong> - Aufträge dürfen angelegt, bearbeitet oder gelöscht werden</li>
+      <li><strong>KUNDEN_BESTELLUNGEN</strong> - Ermöglicht das Anzeigen aller Bestellungen eines Kunden</li>
+      <li><strong>ZUGRIFF<em>BESTELLUNG</em>ERSTELLEN</strong> - Zugriff auf die Seite Bestellung erstellen</li>
+      <li><strong>ZUGRIFF<em>BESTELLUNG</em>UEBERSICHT</strong> - Zugriff auf die Seite Übersicht Bestellungen</li>
+      <li><strong>BESTELLUNG</strong> - Ermöglicht das Anzeigen der Druckansicht einer Bestellung</li>
+      <li><strong>BESTELLUNG_VERWALTEN</strong> - Bestellungen dürfen angelegt, bearbeitet oder gelöscht werden</li>
       <li><strong>KUNDEN_ANGEBOTE</strong> - Ermöglicht das Anzeigen aller Angebote eines Kunden</li>
       <li><strong>ZUGRIFF<em>ANGEBOT</em>ERSTELLEN</strong> - Zugriff auf die Seite Angebote erstellen</li>
       <li><strong>ZUGRIFF<em>ANGEBOT</em>UEBERSICHT</strong> - Zugriff auf die Seite Übersicht Angebote</li>
