--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -20,11 +20,20 @@
       <div id="content">
         <div class="form m1">
           <div class="m1">
+            <label for="searchForm_firmenname">Firmenname</label>
+            <input class="m1" id="searchForm_firmenname" type="text" v-model="grid.searchQuery.firmenname"></input>
+          </div>
+          <div class="m1">
             <div class="m2m">
-              <label for="searchForm_suchfeld_name">Name</label>
-              <input class="m2" id="searchForm_suchfeld_name"
-                title="Ermöglicht die Suche nach Firmenname, Vorname oder Nachname" type="text" v-model="grid.searchQuery.suchfeld_name"></input>
+              <label for="searchForm_nachname">Nachname</label>
+              <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
             </div>
+            <div class="m2">
+              <label for="searchForm_vorname">Vorname</label>
+              <input class="m2" id="searchForm_vorname" type="text" v-model="grid.searchQuery.vorname"></input>
+            </div>
+          </div>
+          <div class="m1">
             <div class="m6m">
               <label for="searchForm_plz">PLZ</label>
               <input class="m6" id="searchForm_plz" type="text" v-model="grid.searchQuery.plz"></input>
@@ -41,7 +50,7 @@
             </div>
           </div>
         </div>
-        <div style="height: 150px;"></div>
+        <div style="height: 250px;"></div>
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
           <grid
             :actions="grid.actions"
