Verkäufer in Druckansicht bei Bestellung hinzugefügt

--- a/src/main/resources/public/bestellung-drucken.html
+++ b/src/main/resources/public/bestellung-drucken.html
@@ -41,6 +41,7 @@
       <br>
       <div class="center font30">Verbindliche Bestellung</div>
       <div class="font15">Bestellnummer: {{entity.filiale.kuerzel}}{{entity.nummerAnzeige}}</div>
+      <div class="font15">Verkäufer: {{entity.ersteller}}</div>
       <br>
       <table class="font16">
         <tbody>
