Telefonnummer und Mobiltelefonnummer des Kunden beim Druck von Bestellungen/Reparaturauftraegen anzeigen

--- a/src/main/resources/public/bestellung-drucken.html
+++ b/src/main/resources/public/bestellung-drucken.html
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <td class="s1" valign="middle">Telefon:</td>
-            <td class="s2">{{entity.kunde.telefon}}</td>
+            <td class="s2">{{entity.kunde.telefonAnzeige}}</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
