--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -127,7 +127,7 @@
               Telefon:
             </td>
             <td class="s2" colspan="2">
-              {{entity.kunde.telefon}}
+              {{entity.kunde.telefonAnzeige}}
             </td>
             <td width=25 style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
               <p align=left style="widows: 0; orphans: 0">&nbsp;</p>
@@ -250,7 +250,7 @@
               <td width="100%" colspan="7" style="border-top-color: #111111; border-top-width: 1">
                 <strong>Anrufprotokoll</strong>
                 <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;NR: {{entity.filiale.kuerzel}}{{entity.nummer}}</span>
-                <span v-if="entity.kunde.telefon">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9990; {{entity.kunde.telefon}}</span>
+                <span v-if="entity.kunde.telefonAnzeige">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9990; {{entity.kunde.telefonAnzeige}}</span>
                 <span v-if="entity.kunde.email">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#9993; {{entity.kunde.email}}</span>
                 </font>
               </td>
