--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -22,6 +22,13 @@
       <div id="content">
         <div class="form m1">
           <div class="m1">
+            <label class="required" for="reparaturEditForm_mitarbeiter">Ersteller</label>
+            <select class="m1" id="reparaturEditForm_mitarbeiter" v-model="entity.mitarbeiter">
+              <option value=""></option>
+              <option :value="m.value" v-for="m in mitarbeiter">{{m.value}}</option>
+            </select>
+          </div>
+          <div class="m1">
             <label class="container radio" v-for="art in reparaturarten">
               <input
                 name="art"
