Reparaturauftrag Auswahl, ob kein Passwort oder Mustersperre ermöglicht
* Feld Gerätepasswort nun Pflichtfeld
* Bei Kein Gerätepasswort wird dies auf dem Reparaturauftrag so angezeigt
* Bei Mustersperre wird zusätzlich eine Vorlage eingeblendet, auf welcher der Kunde sein Muster einzeichnen kann

--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -99,6 +99,7 @@
             </td>
             <td class="s3" colspan="3">
               {{entity.geraetepasswort}}
+              <img src="/themes/icons/muster.png" width="70" height="70" v-if="entity.geraetepasswortArt === 2">
             </td>
           </tr>
           <tr valign=top>
