Rechnungen immer zweifach drucken durch doppelte Anzeige der Daten

--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <div id="rechnung-drucken">
-      <header>
+    <div v-for="item in 2">
+      <header style="page-break-before: always;">
         <div class="center" style="width: 250px; height: 90px;">
           <img src="/themes/icons/logo.png" width="250" height="90">
         </div>
@@ -151,6 +152,7 @@
           Bankverbindung: Computer-Insel GbR . Commerzbank Leipzig . IBAN: DE50 8604 0000 0521 6668 00
         </div>
       </footer>
+    </div>
     </div>
   </body>
   <script src="/scripts/util.js"></script>
