--- a/src/main/resources/public/produkt.html
+++ b/src/main/resources/public/produkt.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Produkte - Computer-Insel Tools by Sita Geßner</title>
+    <title>Inventar - Produkte - Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/inventar.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
