Anzahl Exemplare bei Rechnungen anpassen
* Bei Überweisungen immer nur 1 Exemplar drucken
* Beim Nutzen der E-Mail Funktion immer nur 1 Exemplar drucken
* Anzahl der Exemplare bei Rechnungen in der URL frei definierbar

--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="rechnung-drucken">
-    <div v-for="item in 2">
+    <div v-for="item in exemplare">
       <header style="page-break-before: always;">
         <div class="center" style="width: 250px; height: 90px;">
           <img src="/themes/icons/logo.png" width="250" height="90">
