Bestellung bei Reparaturauftrag auswählbar
* Selektiert den Kunden und die Kosten vor
* Die Bestellung wird beim Speichern des Reparaturauftrags erledigt
* Wird beim Rechnung erstellen eine Reparatur mit hinterlegter Bestellung gewählt, wird die Bestellung ebenfalls gewählt

--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -73,6 +73,12 @@
               <input class="m2" id="reparaturEditForm_geraetepasswort" maxlength="50" type="text" v-model="entity.geraetepasswort" :readonly="entity.geraetepasswortArt !== 0"></input>
             </div>
           </div>
+          <div class="m1" v-if="entity.bestellung">
+            <label for="reparaturEditForm_bestellung">Bestellung</label>
+            <button class="bestellung btnSmall" title="Bestellung suchen" @click="showBestellungDialog = true"></button>
+            <button class="delete btnSmall" title="Bestellung deselektieren" @click="entity.bestellung = {}"></button>
+            <textarea class="m1" id="reparaturEditForm_bestellung" readonly v-model="entity.bestellung.beschreibung"></textarea>
+          </div>
           <div class="m1" v-if="entity.kunde">
             <label for="reparaturEditForm_kunde">Kunde</label><button class="kunde btnSmall" title="Kunde suchen" @click="showKundeDialog = true"></button>
             <textarea class="m1" id="reparaturEditForm_kunde" readonly v-model="entity.kunde.completeWithAdressAndPhone"></textarea>
@@ -121,6 +127,12 @@
         </div>
       </div>
       <messages-box v-bind:text="result" v-if="showDialog" @close="showDialog = false"></messages-box>
+      <bestellung-suchen-dialog
+        :kunde="entity.kunde"
+        v-if="showBestellungDialog"
+        @close="showBestellungDialog = false"
+        @saved="handleBestellungResponse"
+      ></bestellung-suchen-dialog>
       <kunde-suchen-dialog
         :kunde="entity.kunde"
         v-if="showKundeDialog"
@@ -134,6 +146,7 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/zeichenzaehler.component.js"></script>
+  <script src="/scripts/bestellung/bestellung.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.header.component.js"></script>
