--- a/src/main/resources/public/angebot.html
+++ b/src/main/resources/public/angebot.html
@@ -74,6 +74,7 @@
           </div>
         </div>
         <div class="form m1">
+          <ersteller-select @changed="setMitarbeiter"></ersteller-select>
           <div class="m1" v-if="entity.angebot.kunde">
             <label class="required" for="angebotEditForm_angebot_kunde">Kunde</label>
             <button class="kunde btnSmall" title="Kunde suchen" @click="showKundeDialog = true"></button>
@@ -105,6 +106,7 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/zeichenzaehler.component.js"></script>
+  <script src="/scripts/ersteller.select.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
   <script src="/scripts/angebot/angebot.header.component.js"></script>
