--- a/src/main/resources/public/bestellung.html
+++ b/src/main/resources/public/bestellung.html
@@ -21,6 +21,7 @@
       <page-header-bestellung v-bind:marker="'Erstellen'"></page-header-bestellung>
       <div id="content">
         <div class="form m1">
+          <ersteller-select @changed="setMitarbeiter"></ersteller-select>
           <div class="m1" v-if="entity.angebot">
             <label for="bestellungEditForm_angebot">Angebot</label>
             <button class="angebot btnSmall" title="Angebot suchen" @click="showAngebotDialog = true"></button>
@@ -81,6 +82,7 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/zeichenzaehler.component.js"></script>
+  <script src="/scripts/ersteller.select.component.js"></script>
   <script src="/scripts/angebot/angebot.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
