--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -21,13 +21,7 @@
       <page-header-reparatur v-bind:marker="'Erstellen'"></page-header-reparatur>
       <div id="content">
         <div class="form m1">
-          <div class="m1">
-            <label class="required" for="reparaturEditForm_mitarbeiter">Ersteller</label>
-            <select class="m1" id="reparaturEditForm_mitarbeiter" v-model="entity.mitarbeiter">
-              <option value=""></option>
-              <option :value="m.value" v-for="m in mitarbeiter">{{m.value}}</option>
-            </select>
-          </div>
+          <ersteller-select @changed="setMitarbeiter"></ersteller-select>
           <div class="m1">
             <label class="container radio" v-for="art in reparaturarten">
               <input
@@ -146,6 +140,7 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/zeichenzaehler.component.js"></script>
+  <script src="/scripts/ersteller.select.component.js"></script>
   <script src="/scripts/bestellung/bestellung.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
