Feld Gerät/Zubehör bei Reparaturaufträgen als Pflichtfeld

--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -34,7 +34,7 @@
             </label>
           </div>
           <div class="m1">
-            <zeichenzaehler-label :elem="entity.geraet" :forid="'reparaturEditForm_geraet'" :label="'Gerät / Zubehör'" :maxlength="'500'"></zeichenzaehler-label>
+            <zeichenzaehler-label :elem="entity.geraet" :forid="'reparaturEditForm_geraet'" :label="'Gerät / Zubehör'" :maxlength="'500'" :required="true"></zeichenzaehler-label>
             <input class="m1" id="reparaturEditForm_geraet" maxlength="500" type="text" v-model="entity.geraet"></input>
           </div>
           <div class="m1">
