--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -21,7 +21,11 @@
       <page-header-reparatur v-bind:marker="'Erstellen'"></page-header-reparatur>
       <div id="content">
         <div class="form m1">
-          <ersteller-select @changed="setMitarbeiter"></ersteller-select>
+          <ersteller-select
+            :reset="resetErsteller"
+            @changed="setMitarbeiter"
+            @resetted="resetErsteller = false;"
+          ></ersteller-select>
           <div class="m1">
             <label class="container radio" v-for="art in reparaturarten">
               <input
