--- a/src/main/resources/public/einstellungen.html
+++ b/src/main/resources/public/einstellungen.html
@@ -75,6 +75,10 @@
             <textarea class="m1" id="einstellungenForm_mail_body_reparatur" v-model="einstellungen.mailBodyReparatur.wert"></textarea>
           </div>
           <div class="m1">
+            <label for="einstellungenForm_mail_body_angebot">E-Mail Inhalt Angebot versenden</label>
+            <textarea class="m1" id="einstellungenForm_mail_body_angebot" v-model="einstellungen.mailBodyAngebot.wert"></textarea>
+          </div>
+          <div class="m1">
             <label for="einstellungenForm_mail_signatur">E-Mail Signatur</label>
             <textarea class="m1" id="einstellungenForm_mail_signatur" v-model="einstellungen.mailSignatur.wert"></textarea>
           </div>
