--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -265,6 +265,10 @@
     Ist das Suchfeld <em>Angebotsposten-Bezeichnung</em> gefüllt, werden alle anderen Suchfelder ignoriert. Mit Hilfe dieses Suchfeldes können die Angebotsposten durchsucht werden.</p>
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann das Angebot in der Druckansicht angezeigt werden. Dazu wird das Recht <em>ANGEBOT</em> benötigt.</p>
     <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann das Angebot bearbeitet werden.</p>
+    <p>Durch Klick auf das <em>E-Mail-Icon</em> kann dem Kunden das Angebot zugesendet werden. Dazu muss das Angebot zuerst als PDF gedruckt und im
+      sich öffnenden Dialog gewählt werden.
+      Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
+    </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann ein Angebot nach nochmaliger Bestätigung gelöscht werden.</p>
     <h2 id="bestellungen">Bestellung</h2>
     <p>Die Seite Bestellung unterteilt sich in die zwei Unterseiten <strong>Erstellen</strong> und <strong>Bestellungen</strong>.</p>
@@ -425,9 +429,9 @@
     <h4 id="smtpserver">SMTP-Server</h4>
     <p>Hier sind die Verbindungsdaten zum SMTP-Server anzugeben.
       Dabei sind beim Benutzernamen/Passwort die Daten der Filialenadresse anzugeben.
-      Die Daten werden benötigt, um den Kunden per E-Mail über einen abgeschlossenen Reparaturauftrag zu informieren oder eine Rechnung zu senden.
+      Die Daten werden benötigt, um den Kunden per E-Mail über einen abgeschlossenen Reparaturauftrag zu informieren oder eine Rechnung oder ein Angebot zu senden.
       Mit Hilfe der E-Mail-Inhalt-Felder kann allgemein gültig der Inhalt der E-Mail bestimmt werden. Als Platzhalter kann #NUMMER# verwendet werden,
-      um die Rechnungs- oder Reparaturnummer in den Text einzufügen.
+      um die Rechnungs-, Reparatur oder Angebotsnummer in den Text einzufügen.
       Die Signatur wird immer im Fuß der E-Mail hinzugefügt.
     </p>
     <h2 id="filialen">Filialen</h2>
