Reparaturauftrag drucken - Schriftgröße für Felder Gerät, SN, Symptome, Geplante Aufgaben everringert, um mehr Platz zu bekommen

--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -65,7 +65,7 @@
             <td width=227 height=24 style="border: none; padding: 0cm" valign="middle" align="left">
               Gerät / Zubehör:
             </td>
-            <td colspan=3 width=929 style="; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" height="24" valign="bottom">
+            <td colspan=3 width=929 style="font-size: 15px; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" height="24" valign="bottom">
               <span lang="de">{{entity.geraet}}</span>
             </td>
           </tr>
@@ -73,7 +73,7 @@
             <td class="s1">
               SN:
             </td>
-            <td colspan=3 width=929 style="; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
+            <td colspan=3 width=929 style="font-size: 15px; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
               {{entity.seriennummer}}
             </td>
           </tr>
@@ -81,7 +81,7 @@
             <td class="s1" valign="middle">
               Symptome:
             </td>
-            <td colspan=3 width=929 style="; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
+            <td colspan=3 width=929 style="font-size: 15px; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
               {{entity.symptome}}
             </td>
           </tr>
@@ -89,7 +89,7 @@
             <td class="s1">
               Geplante Aufgaben:
             </td>
-            <td colspan=3 class="s3">
+            <td colspan=3 class="s3" style="font-size: 15px;">
               {{entity.aufgaben}}
             </td>
           </tr>
