--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -265,6 +265,7 @@
     Ist das Suchfeld <em>Angebotsposten-Bezeichnung</em> gefüllt, werden alle anderen Suchfelder ignoriert. Mit Hilfe dieses Suchfeldes können die Angebotsposten durchsucht werden.</p>
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann das Angebot in der Druckansicht angezeigt werden. Dazu wird das Recht <em>ANGEBOT</em> benötigt.</p>
     <p>Durch Klick auf das <em>Bearbeiten-Icon</em> kann das Angebot bearbeitet werden.</p>
+    <p>Durch Klick auf das <em>Duplizieren-Icon</em> kann das Angebot dupliziert werden.</p>
     <p>Durch Klick auf das <em>E-Mail-Icon</em> kann dem Kunden das Angebot zugesendet werden. Dazu muss das Angebot zuerst als PDF gedruckt und im
       sich öffnenden Dialog gewählt werden.
       Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
